Upgrading to spring boot 3.3 (#156)